Opened 18 years ago

Closed 18 years ago

#948 closed bug (fixed)

Some applications don't show up in DeskBar

Reported by: johndrinkwater Owned by: bonefish
Priority: normal Milestone: R1
Component: Servers/registrar Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by axeld)

Stefano pointed out that opening more than one application without custom icons fails to display them in DeskBar. Try running Playground and PictureTest for instance, you'd only see Playground's entry.

hrev19286

Attachments (1)

haiku-rev19286-garbled.png (108.3 KB ) - added by johndrinkwater 18 years ago.

Download all attachments as: .zip

Change History (6)

by johndrinkwater, 18 years ago

Attachment: haiku-rev19286-garbled.png added

comment:1 by johndrinkwater, 18 years ago

Description: modified (diff)
Summary: Files relying on mimetypes' HVIF have garbled icons in DeskBarSome applications don't show up in DeskBar

comment:2 by axeld, 18 years ago

Description: modified (diff)
Owner: changed from axeld to stippi

comment:3 by jackburton, 18 years ago

Owner: changed from stippi to bonefish

I've added some debug printfs. Looks like BarApp::AddTeam() is called with signature = NULL for apps like PictureTest, PlayGround, etc. That could explain why those apps are grouped together. Those apps don't have a rdef file, but have a valid signature defined in the constructor. Assigning to bonefish.

comment:4 by jackburton, 18 years ago

Component: - Applications/DeskbarServers/registrar

More info:

~>listattr /boot/beos/demos/PictureTest File: /boot/beos/demos/PictureTest

Type Size Name


MIME String 35 "BEOS:TYPE"

'APPV' 680 "BEOS:APP_VERSION"

So the signature is missing from the file attributes. I think this is a regression, as I seem to recall a similar, if not the same, problem some months ago.

comment:5 by bonefish, 18 years ago

Resolution: fixed
Status: newclosed

That there's no BEOS:APP_SIG attribute for applications that don't have a resource file is only natural (where should it come from?).

The empty app signature problem was caused by the registrar sending out notification messages for pre-registered apps as soon as their team/thread IDs were known. If the app executable had no app signature attribute/resource the signature was still unknown at this point though. As of hrev20058 we only send notification messages for fully registered apps (just as BeOS R5).

Note: See TracTickets for help on using tickets.