Send out B_SOME_APP_LAUNCHED/QUIT messages only for fully registered apps. This fixes bug #948.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@20058 a95241bf-73f2-0310-859d-f6bbb57e9c96